--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,29 @@
-.DS_Store
-/.build
-/Packages
-/*.xcodeproj
 xcuserdata/
+*.xcscmblueprint
+*.xccheckout
+build/
 DerivedData/
-.swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
+*.moved-aside
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+*.hmap
+*.ipa
+*.dSYM.zip
+*.dSYM
+timeline.xctimeline
+playground.xcworkspace
+.build/
+Carthage/Build/
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots/**/*.png
+fastlane/test_output
+iOSInjectionProject/
+*.json.aes
+
